# flask-resources

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
flask_resources/: __init__.py  base.py  config.py  content_negotiation.py  context.py  errors.py  ext.py  headers.py  json_encoder.py  loaders.py  resources.py  response.py  responses.py  version.py
flask_resources/args/: __init__.py  paginate.py  parsers.py
flask_resources/deserializers/: __init__.py  base.py  deserializers.py  json.py
flask_resources/loaders/: __init__.py  json.py  loaders.py
flask_resources/parsers/: __init__.py  base.py  body.py  decorators.py  headers.py  paginate.py  parsers.py  schema.py  url_args.py
flask_resources/serializers/: __init__.py  base.py  csv.py  json.py  serializers.py  simple.py  xml.py  yaml.py
flask_resources/views/: __init__.py  base.py  collections.py  singleton.py
tests/: conftest.py  test_args_parser.py  test_body_parser.py  test_config.py  test_content_negotiation.py  test_deserializers.py  test_error_serialization.py  test_errors.py  test_flask_resources.py  test_headers.py  test_loaders.py  test_parsers.py  test_resources.py  test_resources_docexample.py  test_resources_errors.py  test_response_handlers.py  test_serializers.py
tests/test_invenio_deposit/: __init__.py  conftest.py  test_deposit_api.py
