# SPDX-FileCopyrightText: 2020-2024 CERN.
# SPDX-FileCopyrightText: 2022-2025 Graz University of Technology.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "flask-resources"
description = "Flask Resources module to create REST APIs."
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "api",
  "flask",
  "resources",
  "rest",
]
classifiers = [
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "flask>=1.1.4",
  "marshmallow~=3.0",
  "speaklater>=1.3,<2.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/flask-resources"

[project.optional-dependencies]
tests = [
  "coverage>=5.3,<6",
  "pytest-black>=0.3.0",
  "pytest-cov>=2.10.1",
  "pytest-flask>=1.0.0",
  "pytest-isort>=1.2.0",
  "pytest-mock>=1.6.0",
  "pytest-pydocstyle>=2.2.3",
  "pytest>=7,<8",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flask_resources/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/flask_resources",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_resources --cov-report=term-missing --cov-append'
testpaths = "tests flask_resources"
live_server_scope = "module"
