# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2024 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Flask-Resources is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = flask-resources
version = attr: flask_resources.__version__
description = "Flask Resources module to create REST APIs."
long_description = file: README.rst, CHANGES.rst
keywords = flask TODO
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/flask-resources
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=1.1.4
    marshmallow~=3.0
    speaklater>=1.3,<2.0

[options.extras_require]
tests =
    check-manifest>=0.42
    coverage>=5.3,<6
    pytest>=7,<8
    pytest-black>=0.3.0
    pytest-cov>=2.10.1
    pytest-flask>=1.0.0
    pytest-isort>=1.2.0
    pytest-mock>=1.6.0
    pytest-pydocstyle>=2.2.3
    Sphinx>=4.5.0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = flask_resources/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = flask_resources/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = flask_resources/translations/messages.pot
output-dir = flask_resources/translations/

[update_catalog]
input-file = flask_resources/translations/messages.pot
output-dir = flask_resources/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=flask_resources --cov-report=term-missing --cov-append
testpaths = tests flask_resources
